--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
         </div>
 
-        <h1 class="h1">Iniciar</h1>
+        <h1 class="h1">Iniciar Sesión</h1>
 
     <div>
       
